# 55shG4M-

./: MAINTENANCE_LOG.md  README.md  cmake_install.cmake  main.py
Touhou_Game_C++2026/include/: BulletPattern.hpp  Game.hpp  Menu.hpp  Player.hpp  ResourceManager.hpp  World.hpp
Touhou_Game_C++2026/src/: Bullet.cpp  BulletPattern.cpp  Menu.cpp  Player.cpp
Touhou_Game_CSharp/: TouhouGameCS.csproj
Touhou_Game_CSharp/src/: Program.cs
Trash/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  JUEGO_HTML.html  JUGAR.bat  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  TouhouGame.slnx  TouhouGame.vcxproj  TouhouGame.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  setup_juego.bat
Trash/TouhouGame.dir/MinSizeRel/TouhouGame.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog
archivos_originales/: CMakeLists.txt  INSTALL.md  build.bat
archivos_originales/include/: Ally.hpp  Boss.hpp  Bullet.hpp  DataManager.hpp  Enemy.hpp  Game.hpp  NPC.hpp  Player.hpp  UI.hpp
archivos_originales/src/: Ally.cpp  Boss.cpp  Bullet.cpp  DataManager.cpp  Enemy.cpp  Game.cpp  NPC.cpp  Player.cpp  UI.cpp
lib/Debug/: sfml-audio-d.exp  sfml-audio-d.lib  sfml-graphics-d.exp  sfml-graphics-d.lib  sfml-main-d.lib  sfml-system-d.exp  sfml-window-d.exp  sfml-window-d.lib
lib/MinSizeRel/: sfml-audio.exp  sfml-audio.lib  sfml-graphics.exp  sfml-graphics.lib  sfml-main.lib  sfml-system.exp  sfml-system.lib  sfml-window.exp  sfml-window.lib
touhou_game/: CMakeLists.txt  README.md  build.bat
touhou_game/include/: Bullet.hpp  HUD.hpp
touhou_game/src/: Game.cpp  HUD.cpp  ResourceManager.cpp  World.cpp
x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.write.1.tlog
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
x64/MinSizeRel/ALL_BUILD/: ALL_BUILD.recipe
x64/MinSizeRel/ZERO_CHECK/: ZERO_CHECK.recipe
x64/MinSizeRel/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate
